# airi-research

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt
data/: train_data.csv  val_data.csv
data/preprocessed_train_data/: train_data.csv
data/preprocessed_val_data/: val_data.csv
models/: [Agreeableness] | Meta | Audio | Text | (early fusion).pt  [Conscientiousness] | Meta | Audio | Text | (early fusion).pt  [Extraversion] | Meta | Audio | Text | (early fusion).pt  [Honesty-Humility] | Meta | Audio | Text | (early fusion).pt
notebooks/: audio.ipynb  audio_debug.ipynb  dataset.ipynb  debug.ipynb  dummy.ipynb  longest.txt  models.ipynb  normal.txt
notebooks/debug/: audio_extraction.ipynb  audio_extraction_wav2vec.ipynb  audio_preprocess.ipynb  text.ipynb  video_extraction.ipynb  video_extraction_yolo.ipynb
notebooks/eda/: cringe.txt  temp.txt  text.txt
notebooks/models/: dummy.ipynb
results/: Agreeableness.csv  Conscientiousness.csv  Extraversion.csv  Honesty-Humility.csv  submission.csv
scripts/: server.extraction.bash  server.preprocess.bash  server.train_audio_personality.bash
scripts/extraction/: audio.bash  text.bash  video.bash
scripts/preprocess/: audio.bash  meta.bash  text.bash  video.bash
scripts/testing/track1/: iter2.bash
scripts/testing/track2/: iter2.bash
scripts/training/performance/: audio.bash  combinations.bash  meta.bash  meta_text.bash  meta_video_audio_text.bash  text.bash  video.bash
scripts/training/personality/: audio.bash  combinations.bash  meta_text.bash  meta_video_audio_text.bash  text.bash  video.bash
scripts/training/track1/: iter2.bash
src/: dataset.py  extraction.py  models.py  preprocess.py  submit_performance.py  submit_personality.py  test_personality.py  train_audio_personality.py  train_performance.py  train_personality.py  train_text_personality.py  train_video_personality.py  utils.py
