[project]
name = "airi-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emotiefflib[torch]>=1.0",
    "facenet-pytorch>=2.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "mlflow>=2.22.0",
    "moviepy>=2.2.1",
    "numpy<2",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=10.2.0",
    "pip>=25.1.1",
    "pysoundfile>=0.9.0.post1",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "torch>=2.2.2",
    "torchaudio>=2.2.2",
    "torchinfo>=1.8.0",
    "torchvideo>=0.0.0",
    "transformers[torch]>=4.52.4",
]
