[project]
name = "airi-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "argparse>=1.4.0",
    "emotiefflib[torch]>=1.0",
    "facenet-pytorch>=2.5.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.2.19",
    "mlflow>=2.17.2",
    "moviepy>=1.0.3",
    "numpy<2",
    "onnxruntime==1.19.2",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pip>=25.0.1",
    "pip-system-certs>=4.0",
    "pysoundfile>=0.9.0.post1",
    "rich>=14.0.0",
    "setuptools>=75.3.2",
    "soundfile>=0.13.1",
    "torch==2.4.1",
    "torchaudio>=2.4.1",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchvideo>=0.0.0",
    "transformers[torch]>=4.46.3",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
