[project]
name = "airi-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "catboost>=1.2.8",
    "einops>=0.8.1",
    "emotiefflib[torch]>=1.0",
    "facenet-pytorch>=2.6.0",
    "hf-xet>=1.1.3",
    "huggingface-hub>=0.32.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "librosa>=0.11.0",
    "mlflow>=2.22.1",
    "moviepy>=2.2.1",
    "numpy<2",
    "nvidia-cudnn-cu11>=8.7.0.84",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "optuna>=4.4.0",
    "pandas>=2.2.3",
    "pillow>=10.2.0",
    "pysoundfile>=0.9.0.post1",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "torch>=2.2.2",
    "torchaudio>=2.2.2",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchvision>=0.17.2",
    "transformers[torch]>=4.52.4",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
